--- a/index/index.html
+++ b/index/index.html
@@ -6,39 +6,94 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Document</title>
 </head>
 
 <body>
-    <div class="container">
-        <div class="container-item">
-            <div class="navbar">
-                <a href="" class="navbar-home">Startsida</a>
-                <a href="" class="navbar-product-1">Produkt 1</a>
-                <a href="" class="navbar-product-2">Produkt 2</a>
-                <a href="" class="navbar-login">Logga in</a>
-            </div>
-
-            <div class="carousel">
-                <div class="slideshow-container">
-                    <div class="mySlides fade">
-                        <img src="/pics/apple.jpg" style="width: 100%" height="400px" />
-                    </div>
-                    <div class="mySlides fade">
-                        <img src="/pics/banan.jpg" style="width: 100%" height="400px" />
-                    </div>
-                    <div class="mySlides fade">
-                        <img src="/pics/fruit-basket.jpg" style="width: 100%" height="400px" />
+    <nav>
+            <div id="nav-left-section" class="nav-section">
+                <a href="" id="nav-section-text" class="nav-left-section-webshop">Webshop</a>
+                <a href="" id="nav-section-text" class="nav-left-section-home">Home</a>
+                <a href="" id="nav-section-text" class="nav-left-section-products">Products</a>
+                <a href="" id="nav-section-text" class="nav-left-section-about">About</a>
+            </div>>
+            <div id="nav-right-section" class="nav-section">
+                <a href="" id="nav-section-text" class="nav-right-section-sign-in">Sign In</a>
+                <div class="nav-right-section-cart">
+                    <div id="shopping-cart-icon" class="add-item-button">
+                        <span class="material-icons md-36">shopping_cart</span>
                     </div>
                 </div>
-                <h1 class="Webbshop-maintitle">Webbshop</h1>
             </div>
+    </nav>
 
-            <div class="shopping-cards"></div>
-
-            <div class="footer"></div>
-        </div>
-    </div>
+    <main>
+        <article>
+            <div id="card" class="card 1"><img src="/pics/shoes1.jpg" alt="" id="card-img">
+                <div>
+                    <h2 class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit placeat
+                        quaerat tempore ea officiis aliquid incidunt asperiores sapiente ullam? Quae?</h2>
+                </div>
+                <div class="card-item-add">
+                    <a onclick="mouseClickSound.play()" class="material-icons md-48"
+                        id="item-add-icon">add_shopping_cart</a>
+                </div>
+            </div>
+            <div id="card" class="card 2"><img src="/pics/shoes1.jpg" alt="" id="card-img">
+                <div>
+                    <h2 class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit placeat
+                        quaerat tempore ea officiis aliquid incidunt asperiores sapiente ullam? Quae?</h2>
+                </div>
+                <div class="card-item-add">
+                    <a onclick="mouseClickSound.play()" class="material-icons md-48"
+                        id="item-add-icon">add_shopping_cart</a>
+                </div>
+            </div>
+            <div id="card" class="card 3"><img src="/pics/shoes1.jpg" alt="" id="card-img">
+                <div>
+                    <h2 class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit placeat
+                        quaerat tempore ea officiis aliquid incidunt asperiores sapiente ullam? Quae?</h2>
+                </div>
+                <div class="card-item-add">
+                    <a onclick="mouseClickSound.play()" class="material-icons md-48"
+                        id="item-add-icon">add_shopping_cart</a>
+                </div>
+            </div>
+            <div id="card" class="card 4"><img src="/pics/shoes1.jpg" alt="" id="card-img">
+                <div>
+                    <h2 class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit placeat
+                        quaerat tempore ea officiis aliquid incidunt asperiores sapiente ullam? Quae?</h2>
+                </div>
+                <div class="card-item-add">
+                    <a onclick="mouseClickSound.play()" class="material-icons md-48"
+                        id="item-add-icon">add_shopping_cart</a>
+                </div>
+            </div>
+            <div id="card" class="card 5"><img src="/pics/shoes1.jpg" alt="" id="card-img">
+                <div>
+                    <h2 class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit placeat
+                        quaerat tempore ea officiis aliquid incidunt asperiores sapiente ullam? Quae?</h2>
+                </div>
+                <div class="card-item-add">
+                    <a onclick="mouseClickSound.play()" class="material-icons md-48"
+                        id="item-add-icon">add_shopping_cart</a>
+                </div>
+            </div>
+            <div id="card" class="card 6"><img src="/pics/shoes1.jpg" alt="" id="card-img">
+                <div>
+                    <h2 class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit placeat
+                        quaerat tempore ea officiis aliquid incidunt asperiores sapiente ullam? Quae?</h2>
+                </div>
+                <div class="card-item-add">
+                    <a onclick="mouseClickSound.play()" class="material-icons md-48"
+                        id="item-add-icon">add_shopping_cart</a>
+                </div>
+            </div>
+        </article>
+        <article></article>
+        <article></article>
+    </main>
 
     <script src="/index/script.js"></script>
 </body>
