--- a/src/index.html
+++ b/src/index.html
@@ -1,40 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/src/css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/src/css/style.css" />
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-  <title>Document</title>
-</head>
-
-<body>
-  <nav>
-    <div id="nav-left-section" class="nav-section">
-      <a href="" id="nav-section-text" class="nav-left-section-webshop">Webshop</a>
-      <a href="" id="nav-section-text" class="nav-left-section-home">Home</a>
-      <a href="" id="nav-section-text" class="nav-left-section-products">Products</a>
-      <a href="" id="nav-section-text" class="nav-left-section-about">About</a>
-    </div>
-    >
-    <div id="nav-right-section" class="nav-section">
-      <a href="" id="nav-section-text" class="nav-right-section-sign-in">Sign In</a>
-      <div class="nav-right-section-cart">
-        <div id="shopping-cart-icon">
-          <span class="material-icons md-36">shopping_cart</span>
+  <body>
+    <nav>
+      <div id="nav-left-section" class="nav-section">
+        <a href="" id="nav-section-text" class="nav-left-section-webshop"
+          >Webshop</a
+        >
+        <a href="" id="nav-section-text" class="nav-left-section-home">Home</a>
+        <a href="" id="nav-section-text" class="nav-left-section-products"
+          >Products</a
+        >
+        <a href="" id="nav-section-text" class="nav-left-section-about"
+          >About</a
+        >
+      </div>
+      >
+      <div id="nav-right-section" class="nav-section">
+        <a href="" id="nav-section-text" class="nav-right-section-sign-in"
+          >Sign In</a
+        >
+        <div class="nav-right-section-cart">
+          <div id="shopping-cart-icon">
+            <a class="material-icons md-36" href="/src/cart.html">shopping_cart</a>
+            <span class="cartValue">
+              0
+            </span>
+          </div>
         </div>
       </div>
-    </div>
-  </nav>
-  <main>
-    <article class="cardItems"></article>
-    <article class="cardItemsSecondPage"></article>
-  </main>
-  <script src="/src/js/script.js"></script>
-  <script src="/src/js/products.js"></script>
-  <script src="/src/js/cart.js"></script>
-</body>
+    </nav>
+    <main>
+      <article class="cardItems"></article>
+    </main>
+    
 
+
+    <script src="/src/js/script.js"></script>
+    <script src="/src/js/cart.js"></script>
+  </body>
 </html>
